Fix word wrap

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -482,7 +482,7 @@
   padding-top: 5px;
   display: flex;
   flex-direction: column;
-  // word-break: break-all;
+  word-break: break-word;
 }
 
 .message img {
